sticky pre-release

--- a/frame/ethereum/Cargo.toml
+++ b/frame/ethereum/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 description = "Ethereum compatibility full block processing emulation pallet for Substrate."
 license = "Apache-2.0"
 resolver = "2"
+pre-release-updates = "sticky"
 
 [dependencies]
 rustc-hex = { version = "2.1.0", default-features = false }
