--- a/frame/evm/Cargo.toml
+++ b/frame/evm/Cargo.toml
@@ -8,6 +8,7 @@ homepage = "https://substrate.io"
 repository = "https://github.com/paritytech/frontier/"
 description = "FRAME EVM contracts pallet"
 readme = "README.md"
+pre-release-updates = "sticky"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
